# Stegpeg

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  test.rs
c_src/: jpeglib_macrofuns.c
src/libstegpeg/: lib.rs  libjpeg.rs
src/libstegpeg/algorythms/: common.rs  f5.rs  jsteg.rs  lsb.rs  mod.rs
src/utils/: extract_c.rs
tests/: jsteg.rs  lsb.rs  main.rs
tests/files/: test.txt  test1k.txt
