[package]
name = "stegpeg"
version = "0.0.0"
authors = ["Nick Herman <gerkola@gmail.com>"]
build = "build.rs"

[build-dependencies]
gcc = ">=0.3.5"

[lib]
name = "stegpeg"
path = "src/libstegpeg/lib.rs"
crate-types = ["rlib", "dylib"]
test = true
doctest = false
bench = true
plugin = false
harness = true
